--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
     "framer-motion": "^11.15.0",
-    "next": "^15.1.6",
+    "next": "15.5.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
